Adjust API model and route and temperature calculation logic.

--- a/weather-app/Resources/String/Localizable.strings
+++ b/weather-app/Resources/String/Localizable.strings
@@ -7,3 +7,4 @@
 "errorEmptyStateDescriptionContact" = "Não foi possível encontrar a nenhuma previsão para sua localização.";
 "emptyStateTitleWeather" = "Sem Previsão";
 "emptyStateDescriptionWeather" = "No momento não existe uma previsão de tempo para sua região.";
+"emptyStateLabel" = "- - -";
