Adding Icon navigation Button Item and actions on changing the temperature type.

--- a/weather-app/Resources/String/Localizable.strings
+++ b/weather-app/Resources/String/Localizable.strings
@@ -1,3 +1,4 @@
+"titleNavigationWeather" = "Desafio LuizaLabs";
 "buttonTryAgain" = "Tente novamente";
 "errorInternetDescription" = "Não foi possível carregar a página no momento";
 "errorUnexpectedDescription" = "Não foi possivel carregar a página no momento. Por favor, tente mais tarde.";
