refresh load tableview and treatment for location not found.

--- a/weather-app/Resources/String/Localizable.strings
+++ b/weather-app/Resources/String/Localizable.strings
@@ -9,3 +9,5 @@
 "emptyStateTitleWeather" = "Sem Previsão";
 "emptyStateDescriptionWeather" = "No momento não existe uma previsão de tempo para sua região.";
 "emptyStateLabel" = "- - -";
+"emptyStateTitleLocation" = "Sem localização";
+"emptyStateDescriptionLocation" = "Não foi possível encontrar sua localização, precisamos que autorize sua localização em configurações.";
